# jellyfin-desktop-rtx

./: CHANGELOG.md  README.md
.github/workflows/: build-windows.yml
resources/win/: iconres.rc.in
src/: Cargo.toml
src/config/src/: lib.rs
src/jfn_cef/: Cargo.toml  build.rs
src/jfn_cef/src/: app.rs  business_common.rs  business_web.rs  updater.rs
src/jfn_rust/src/: app.rs
src/mpv/src/: boot.rs
src/paths/src/: lib.rs
src/playback/src/: ingest_driver.rs
src/updater/: Cargo.toml  build.rs  updater.manifest  updater.rc
src/updater/src/: main.rs  win.rs
src/web/: client-settings.js  mpv-video-player.js  native-shim.js
src/xtask/src/: build.rs  platform_windows.rs
